Labsheet 1 answers and labsheet 2

--- a/notebooks/part_1_likelihood.ipynb
+++ b/notebooks/part_1_likelihood.ipynb
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "Bernoulli(probs: 0.0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,13 +515,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "3de3024408fa402992f6c18eba5e3528",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,9 +554,9 @@
     "\\end{align}\n",
     "i.e. the bin-width times the probability density.\n",
     "\n",
-    "Here, we have $20$ bins, with probability density $1$, and bin width $\\delta = 1/20$.\n",
+    "Here, we have $10$ bins, with probability density $1$, and bin width $\\delta = 1/20$.\n",
     "\n",
-    "The probability of being in any 1 bin is therefore $\\P{p} \\times \\delta = 1 \\times 1/20 = 1/20$, and adding up the $20$ bins gives us $1$."
+    "The probability of being in any 1 bin is therefore $\\P{p} \\times \\delta = 1 \\times 1/10 = 1/10$, and adding up the $10$ bins gives us $1$."
    ]
   },
   {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "torch.Size([2, 100000])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,16 +597,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ True, False, False,  ..., False, False,  True])\n",
-      "tensor(33462)\n",
-      "torch.Size([33462])\n"
+      "tensor([False,  True, False,  ..., False,  True, False])\n",
+      "tensor(33393)\n",
+      "torch.Size([33393])\n"
      ]
     }
    ],
@@ -627,13 +627,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "9b2520eb15f340e89b196a30c4656262",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,13 +690,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "bff0deaabf37434ca1be0b2e0a119d17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -791,13 +791,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34be96fd1dcc4f289a243f7087c56cce",
+       "model_id": "82237655df6b4d2aa55b840189d86029",
        "version_major": 2,
        "version_minor": 0
       },
