--- a/notebooks/part_2_regression.ipynb
+++ b/notebooks/part_2_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,17 +52,7 @@
     "\\newcommand{\\I}{\\mathbf{I}}\n",
     "$$\n",
     "\n",
-    "<h1> Part 3: Supervised learning: classification and regression </h1>\n",
-    "\n",
-    "First things first:\n",
-    "<ul>\n",
-    "  <li> I'm experimenting with doing the lectures in Jupyter Notebooks.</li>\n",
-    "  <li> Hopefully, it means we can connect theory and code more closely.</li>\n",
-    "  <li> As much as possible, I'll try to prepare the ground for later deep-leaning and machine learning courses.</li>\n",
-    "  <li> I'm going to use PyTorch, mainly for the distributions library.</li>\n",
-    "  <li> PyTorch's syntax is almost exactly the same as Numpy.</li>\n",
-    "  <li> There may be some repetition from previous lectures, but I'll be doing things much more deeply, with more simulations</li>\n",
-    "</ul>"
+    "<h1> Part 2: Supervised learning: regression </h1>"
    ]
   },
   {
@@ -226,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eba2261c8f8e47eca7fb3e3a64c5ac97",
+       "model_id": "14939df97437435ba28623f19cff1406",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +275,7 @@
      "output_type": "stream",
      "text": [
       "Wtrue = tensor([[1.]])\n",
-      "Wh    = tensor([[0.9978]])\n"
+      "Wh    = tensor([[1.0049]])\n"
      ]
     }
    ],
@@ -297,13 +287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baa72377a2314703b642d1f54b63f627",
+       "model_id": "5faadd05e9584050ae04737b633f232f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,7 +329,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1469a9c24de645d2afeaed19c2de1f08",
+       "model_id": "f96cb3bc727e44469bcb58fbb1abcf50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,7 +367,7 @@
      "output_type": "stream",
      "text": [
       "Wtrue = tensor([[1., 1.]])\n",
-      "Wh    = tensor([[1.0559, 0.9915]])\n"
+      "Wh    = tensor([[0.9885, 1.0050]])\n"
      ]
     }
    ],
@@ -395,7 +385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e15db7d08874e14b91c46c93b0fa5ca",
+       "model_id": "caf855d5d81e4f3f85da802c33938ec0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,7 +444,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc41eda6de054f288df2bb8ec9a2c15b",
+       "model_id": "29e9f3676f984e8e8ede62bf4a6d66c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -493,7 +483,7 @@
      "output_type": "stream",
      "text": [
       "Wtrue = tensor([[2.]])\n",
-      "Wh    = tensor([[6.5522]])\n"
+      "Wh    = tensor([[6.5778]])\n"
      ]
     }
    ],
@@ -511,7 +501,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca0e229ed3cf48caac484abf0dfa577e",
+       "model_id": "29791211190f484b84e82c1eb4cc26bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -562,16 +552,16 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.9547, 1.0000],\n",
-       "        [0.9455, 1.0000],\n",
-       "        [0.0064, 1.0000],\n",
-       "        [0.2388, 1.0000],\n",
-       "        [0.6370, 1.0000],\n",
-       "        [0.4014, 1.0000],\n",
-       "        [0.8296, 1.0000],\n",
-       "        [0.9033, 1.0000],\n",
-       "        [0.3579, 1.0000],\n",
-       "        [0.2512, 1.0000]])"
+       "tensor([[0.0634, 1.0000],\n",
+       "        [0.0631, 1.0000],\n",
+       "        [0.2026, 1.0000],\n",
+       "        [0.6794, 1.0000],\n",
+       "        [0.4961, 1.0000],\n",
+       "        [0.4745, 1.0000],\n",
+       "        [0.5926, 1.0000],\n",
+       "        [0.5908, 1.0000],\n",
+       "        [0.0310, 1.0000],\n",
+       "        [0.2802, 1.0000]])"
       ]
      },
      "execution_count": 14,
@@ -596,7 +586,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wh    = tensor([[1.9992, 2.9999]])\n",
+      "Wh    = tensor([[1.9822, 3.0196]])\n",
       "Wtrue = tensor([[2.]])\n",
       "btrue = 3\n"
      ]
@@ -617,7 +607,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee03da7894e8417d9e3e2f07a9896c7b",
+       "model_id": "4716311ec47443b48c5e7f55fdda1cb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +659,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75ea05ca9f034b8da51d04d816f4bdbb",
+       "model_id": "05557f943d0a40e48094be9b0f9e17a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -705,16 +695,16 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 5.3886e+00,  2.3213e+00,  1.0000e+00],\n",
-       "        [ 2.9745e+00, -1.7247e+00,  1.0000e+00],\n",
-       "        [ 1.0021e+00,  1.0010e+00,  1.0000e+00],\n",
-       "        [ 7.8433e-01,  8.8562e-01,  1.0000e+00],\n",
-       "        [ 5.6164e-01,  7.4943e-01,  1.0000e+00],\n",
-       "        [ 3.4164e-02, -1.8484e-01,  1.0000e+00],\n",
-       "        [ 5.3391e+00,  2.3106e+00,  1.0000e+00],\n",
-       "        [ 4.5680e-02, -2.1373e-01,  1.0000e+00],\n",
-       "        [ 3.7420e-03,  6.1172e-02,  1.0000e+00],\n",
-       "        [ 4.2366e-02,  2.0583e-01,  1.0000e+00]])"
+       "tensor([[ 1.6265e-01, -4.0330e-01,  1.0000e+00],\n",
+       "        [ 4.9960e-07, -7.0682e-04,  1.0000e+00],\n",
+       "        [ 6.3720e-06, -2.5243e-03,  1.0000e+00],\n",
+       "        [ 4.3597e-03,  6.6028e-02,  1.0000e+00],\n",
+       "        [ 1.3815e+00, -1.1754e+00,  1.0000e+00],\n",
+       "        [ 2.2546e-01,  4.7483e-01,  1.0000e+00],\n",
+       "        [ 4.7058e-06, -2.1693e-03,  1.0000e+00],\n",
+       "        [ 1.4485e-02,  1.2035e-01,  1.0000e+00],\n",
+       "        [ 1.2843e+00, -1.1333e+00,  1.0000e+00],\n",
+       "        [ 4.6125e-01,  6.7915e-01,  1.0000e+00]])"
       ]
      },
      "execution_count": 18,
@@ -739,7 +729,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wh    = tensor([[ 1.9489, -1.0351,  1.0366]])\n",
+      "Wh    = tensor([[ 1.9423, -1.0321,  1.1191]])\n",
       "qtrue = 2\n",
       "ltrue = -1\n",
       "btrue = 1\n"
@@ -762,7 +752,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a567011a09db487bb65f0d7ee2bc0699",
+       "model_id": "17311dd40a364cb1a062ae418d19346f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -785,6 +775,20 @@
     "ax.plot(xs, quad(xs)@Wh, 'r', label=\"fitted line\")\n",
     "ax.legend();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
