--- a/labs/lab_1/labsheet1.ipynb
+++ b/labs/lab_1/labsheet1.ipynb
@@ -207,7 +207,7 @@
     "- `10 / 3`\n",
     "- `10 / 3.0`\n",
     "\n",
-    "please consider the difference between the output of the last two commands. Are you running python 2 or 3?\n",
+    "please consider whether there is a difference between the output of the last two commands.  In Python 3 there is no difference; in Python 2 there is a difference because integer division is handled in a different way. Are you running python 2 or 3?\n",
     "\n",
     "\n",
     "## NumPy \n",
@@ -509,9 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## The automarker\n",
     "\n",
@@ -598,5 +596,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
