Part 1 problem sheet

--- a/notebooks/part_3_overfitting.ipynb
+++ b/notebooks/part_3_overfitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "\\newcommand{\\La}{\\mathbf{\\Lambda}}\n",
     "$$\n",
     "\n",
-    "<h1> Lecture 2: Overfitting, regularisation and cross-validation </h1>\n",
+    "<h1> Part 3: Overfitting, regularisation and cross-validation </h1>\n",
     "\n",
     "<h2> Varieties of overfitting </h2>\n",
     "\n",
@@ -63,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1a9d0adc3394ef4bb35ee9ffbc01f8b",
+       "model_id": "249dda5ddfde4e30b9cb9ef8d147718a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef362e2463dc4dd18e769e19fd7832d4",
+       "model_id": "11a9d31edf314f1a896765370dddb23e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,13 +189,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bc61e794fc647d2a9f7ef9006a5f82a",
+       "model_id": "bb8afba64b37458e920c51f723b3bf4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,7 +209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05a7ea11d33b459292f3e59dc0de3355",
+       "model_id": "96bd9b5395d2498ea3ee46a20e35d989",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76b89181f6a44c469209e6bdb98d79de",
+       "model_id": "01a0f388c85549d3a52385e0c5ed47f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,13 +317,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5c6d64dfbe04a87b0c4ce9e34141a88",
+       "model_id": "da2daaf2d75d4bfa8a5e605f2d747112",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,13 +402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/laurence/programs/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:10: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcef74a50a3d4898b6bb9fd76de4999f",
+       "model_id": "a0e372816fed4108ad922e5441238cff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,13 +449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2431ddf6a860466393aa015d70210485",
+       "model_id": "9644fe58b7cd447c8c6b2d979a6e750f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -517,13 +525,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/laurence/programs/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:11: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "727946c3d84e4fd1935386265fcbace8",
+       "model_id": "3aa814ce78034888b2ae3ad7e901e9ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -563,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -576,9 +592,16 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/laurence/programs/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:19: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "926c43ae44d546138067e07f8a89cd79",
+       "model_id": "28203b67de534b6ca61efde4ef97f4d8",
        "version_major": 2,
        "version_minor": 0
       },
