--- a/notebooks/Question_Sheet_1_regression.ipynb
+++ b/notebooks/Question_Sheet_1_regression.ipynb
@@ -2,17 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch as t\n",
-    "from torch.distributions import MultivariateNormal as MvNormal\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "%matplotlib widget\n",
-    "from ipywidgets import FloatSlider, IntSlider, interact, interact_manual"
+    "from torch.distributions import MultivariateNormal as MvNormal"
    ]
   },
   {
@@ -79,11 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "<h3> Answer </h3>\n",
     "\n",
@@ -158,11 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "<h3> Answer </h3>\n",
     "\n",
@@ -172,11 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = t.tensor([\n",
@@ -201,11 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "Begin by computing $\\X^T \\X$,"
    ]
@@ -213,13 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -247,11 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "Next compute, $\\X^T \\X + \\sigma^2 \\La$,"
    ]
@@ -259,13 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -293,11 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "Now, compute $\\b{\\X^T \\X + \\sigma^2 \\La}^{-1}$ inverse using the standard formula,\n",
     "\n",
@@ -311,13 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -355,11 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "Now, compute $\\X^T \\y$,"
    ]
@@ -367,13 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -399,11 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "Finally, we compute $\\b{\\X^T \\X + \\sigma^2 \\La}^{-1} \\X^T \\y$ as a matrix-vector multiplication,"
    ]
@@ -411,13 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
