Added note about cooperation

--- a/coursework/instructions/CW1.tex
+++ b/coursework/instructions/CW1.tex
@@ -1,9 +1,11 @@
 \title{CW1: An Unknown Signal}
 \date{\today}
 
-\documentclass[12pt]{article}
+\documentclass[10pt]{article}
 
 \usepackage{graphicx}
+\usepackage{parskip}
+
 %\usepackage{minted}
 
 \date{}
@@ -26,6 +28,8 @@ You will be required to reconstruct the signal and give the resulting error.
 Your mark will be based on a report you write about the code, submitted to the ``Data-Driven Computer Science Coursework'' submission point.
 You will also submit the code as a single python file to ``Code submission point''.  
 We will check that the code satisfies the basic requirements (in the implementation section) and for plagarism, but we won't assess its performance.
+
+You are required to work on this coursework individually. You may consult with your peers on the concepts and spirit of the assignment/solution, but you may not exchange code or passages of text for the report.
 
 The deadline is April 30th at noon UK time.
 
